myanalyzer.output
Grammar

    0 $accept: input $end

    1 input: program_start

    2 program_start: program_main
    3              | const_declaration program_start
    4              | var_decl program_start
    5              | fun_definition program_start

    6 program_main: KW_DEF KW_MAIN L_PARENTHESIS R_PARENTHESIS COLON KW_ENDDEF SEMICOLON
    7             | KW_DEF KW_MAIN L_PARENTHESIS R_PARENTHESIS COLON function_body KW_ENDDEF SEMICOLON

    8 function_body: local_declarations statements
    9              | statements

   10 var_const_decl: var_decl
   11               | const_declaration

   12 local_declarations: local_declarations var_const_decl
   13                   | var_const_decl

   14 const_declaration: KW_CONST const_assign COLON data_type SEMICOLON

   15 const_assign: TK_IDENTIFIER OP_ASSIGN expression
   16             | TK_IDENTIFIER OP_ASSIGN TK_STRING

   17 var_decl: var_chain COLON data_type SEMICOLON

   18 var_chain: var_strings
   19          | var_chain COMMA var_strings

   20 var_strings: TK_IDENTIFIER
   21            | TK_IDENTIFIER L_BRACKET expression R_BRACKET

   22 data_type: KW_INTEGER
   23          | KW_STR
   24          | KW_REAL
   25          | KW_BOOLEAN
   26          | KW_VOID

   27 fun_definition: KW_DEF TK_IDENTIFIER L_PARENTHESIS fun_parameters R_PARENTHESIS OP_MINUS OP_GREATER data_type COLON function_body KW_ENDDEF SEMICOLON
   28               | KW_DEF TK_IDENTIFIER L_PARENTHESIS fun_parameters R_PARENTHESIS COLON function_body KW_ENDDEF SEMICOLON

   29 fun_parameters: fun_parameter_member COMMA fun_parameters
   30               | fun_parameter_member
   31               | %empty

   32 fun_parameter_member: TK_IDENTIFIER COLON data_type
   33                     | TK_IDENTIFIER L_BRACKET R_BRACKET COLON data_type

   34 statements: statement
   35           | statements statement

   36 statement: assign_object SEMICOLON
   37          | function_call SEMICOLON
   38          | KW_CONTINUE SEMICOLON
   39          | KW_BREAK SEMICOLON
   40          | for_loop
   41          | while_loop
   42          | if_block
   43          | return_statement
   44          | syscall

   45 assign_object: var_strings OP_ASSIGN expression
   46              | var_strings OP_ASSIGN_INCR expression
   47              | var_strings OP_ASSIGN_DEC expression
   48              | var_strings OP_ASSIGN_MUL expression
   49              | var_strings OP_ASSIGN_DIV expression
   50              | var_strings OP_ASSIGN_MOD expression

   51 function_call: TK_IDENTIFIER L_PARENTHESIS function_call_chain R_PARENTHESIS

   52 function_call_chain: %empty
   53                    | function_call_chain COMMA expression
   54                    | expression

   55 for_loop: KW_FOR TK_IDENTIFIER KW_IN L_BRACKET expression COLON expression R_BRACKET COLON statements KW_ENDFOR SEMICOLON
   56         | KW_FOR TK_IDENTIFIER KW_IN L_BRACKET expression COLON expression COLON expression R_BRACKET COLON statements KW_ENDFOR SEMICOLON

   57 while_loop: KW_WHILE L_PARENTHESIS expression R_PARENTHESIS COLON statements KW_ENDWHILE SEMICOLON

   58 if_block: KW_IF L_PARENTHESIS expression R_PARENTHESIS COLON statements KW_ENDIF SEMICOLON
   59         | KW_IF L_PARENTHESIS expression R_PARENTHESIS COLON statements KW_ELSE COLON statements KW_ENDIF SEMICOLON

   60 return_statement: KW_RETURN SEMICOLON
   61                 | KW_RETURN expression SEMICOLON

   62 array_expression: TK_IDENTIFIER L_BRACKET expression R_BRACKET
   63                 | TK_IDENTIFIER L_BRACKET R_BRACKET

   64 expression: OP_MINUS expression
   65           | OP_PLUS expression
   66           | L_PARENTHESIS expression R_PARENTHESIS
   67           | expression OP_PLUS expression
   68           | expression OP_MINUS expression
   69           | expression OP_MUL expression
   70           | expression OP_DIV expression
   71           | expression OP_MOD expression
   72           | expression OP_POW expression
   73           | expression OP_EQ expression
   74           | expression OP_NEQ expression
   75           | expression OP_LESS expression
   76           | expression OP_LESSEQ expression
   77           | expression OP_GREATER expression
   78           | expression OP_GREATEREQ expression
   79           | expression OP_AND expression
   80           | expression OP_OR expression
   81           | OP_NOT expression
   82           | array_expression
   83           | TK_IDENTIFIER
   84           | TK_INTEGER
   85           | TK_REAL
   86           | KW_TRUE
   87           | KW_FALSE
   88           | syscall
   89           | function_call

   90 syscall: var_strings OP_ASSIGN FUNC_RSTR L_PARENTHESIS R_PARENTHESIS SEMICOLON
   91        | var_strings OP_ASSIGN FUNC_RSCAL L_PARENTHESIS R_PARENTHESIS SEMICOLON
   92        | var_strings OP_ASSIGN FUNC_RINT L_PARENTHESIS R_PARENTHESIS SEMICOLON
   93        | FUNC_WSTR L_PARENTHESIS syscall_write_content R_PARENTHESIS SEMICOLON
   94        | FUNC_WSCAL L_PARENTHESIS syscall_write_content R_PARENTHESIS SEMICOLON
   95        | FUNC_WINT L_PARENTHESIS syscall_write_content R_PARENTHESIS SEMICOLON
   96        | FUNC_WRT L_PARENTHESIS syscall_write_content R_PARENTHESIS SEMICOLON

   97 syscall_write_content: TK_IDENTIFIER
   98                      | TK_STRING
   99                      | array_expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    KW_VOID (258) 26
    KW_INTEGER (259) 22
    KW_REAL (260) 24
    KW_STR (261) 23
    KW_BOOLEAN (262) 25
    KW_TRUE (263) 86
    KW_FALSE (264) 87
    KW_CONST (265) 14
    KW_IF (266) 58 59
    KW_ELSE (267) 59
    KW_ENDIF (268) 58 59
    KW_FOR (269) 55 56
    KW_IN (270) 55 56
    KW_ENDFOR (271) 55 56
    KW_WHILE (272) 57
    KW_ENDWHILE (273) 57
    KW_BREAK (274) 39
    KW_CONTINUE (275) 38
    KW_DEF (276) 6 7 27 28
    KW_ENDDEF (277) 6 7 27 28
    KW_MAIN (278) 6 7
    KW_RETURN (279) 60 61
    SEMICOLON (280) 6 7 14 17 27 28 36 37 38 39 55 56 57 58 59 60 61 90 91 92 93 94 95 96
    L_PARENTHESIS (281) 6 7 27 28 51 57 58 59 66 90 91 92 93 94 95 96
    R_PARENTHESIS (282) 6 7 27 28 51 57 58 59 66 90 91 92 93 94 95 96
    COMMA (283) 19 29 53
    L_BRACKET (284) 21 33 55 56 62 63
    R_BRACKET (285) 21 33 55 56 62 63
    COLON (286) 6 7 14 17 27 28 32 33 55 56 57 58 59
    OP_PLUS (287) 65 67
    OP_MINUS (288) 27 64 68
    OP_MUL (289) 69
    OP_DIV (290) 70
    OP_MOD (291) 71
    OP_POW (292) 72
    OP_EQ (293) 73
    OP_NEQ (294) 74
    OP_LESS (295) 75
    OP_LESSEQ (296) 76
    OP_GREATER (297) 27 77
    OP_GREATEREQ (298) 78
    OP_AND (299) 79
    OP_OR (300) 80
    OP_NOT (301) 81
    OP_ASSIGN (302) 15 16 45 90 91 92
    OP_ASSIGN_INCR (303) 46
    OP_ASSIGN_DEC (304) 47
    OP_ASSIGN_MUL (305) 48
    OP_ASSIGN_DIV (306) 49
    OP_ASSIGN_MOD (307) 50
    FUNC_RSTR (308) 90
    FUNC_RINT (309) 92
    FUNC_RSCAL (310) 91
    FUNC_WSTR (311) 93
    FUNC_WINT (312) 95
    FUNC_WSCAL (313) 94
    FUNC_WRT (314) 96
    TK_IDENTIFIER <str> (315) 15 16 20 21 27 28 32 33 51 55 56 62 63 83 97
    TK_INTEGER <str> (316) 84
    TK_REAL <str> (317) 85
    TK_STRING <str> (318) 16 98


Nonterminals, with rules where they appear

    $accept (64)
        on left: 0
    input (65)
        on left: 1
        on right: 0
    program_start <str> (66)
        on left: 2 3 4 5
        on right: 1 3 4 5
    program_main <str> (67)
        on left: 6 7
        on right: 2
    function_body <str> (68)
        on left: 8 9
        on right: 7 27 28
    var_const_decl <str> (69)
        on left: 10 11
        on right: 12 13
    local_declarations <str> (70)
        on left: 12 13
        on right: 8 12
    const_declaration <str> (71)
        on left: 14
        on right: 3 11
    const_assign <str> (72)
        on left: 15 16
        on right: 14
    var_decl <str> (73)
        on left: 17
        on right: 4 10
    var_chain <str> (74)
        on left: 18 19
        on right: 17 19
    var_strings <str> (75)
        on left: 20 21
        on right: 18 19 45 46 47 48 49 50 90 91 92
    data_type <str> (76)
        on left: 22 23 24 25 26
        on right: 14 17 27 32 33
    fun_definition <str> (77)
        on left: 27 28
        on right: 5
    fun_parameters <str> (78)
        on left: 29 30 31
        on right: 27 28 29
    fun_parameter_member <str> (79)
        on left: 32 33
        on right: 29 30
    statements <str> (80)
        on left: 34 35
        on right: 8 9 35 55 56 57 58 59
    statement <str> (81)
        on left: 36 37 38 39 40 41 42 43 44
        on right: 34 35
    assign_object <str> (82)
        on left: 45 46 47 48 49 50
        on right: 36
    function_call <str> (83)
        on left: 51
        on right: 37 89
    function_call_chain <str> (84)
        on left: 52 53 54
        on right: 51 53
    for_loop <str> (85)
        on left: 55 56
        on right: 40
    while_loop <str> (86)
        on left: 57
        on right: 41
    if_block <str> (87)
        on left: 58 59
        on right: 42
    return_statement <str> (88)
        on left: 60 61
        on right: 43
    array_expression <str> (89)
        on left: 62 63
        on right: 82 99
    expression <str> (90)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
        on right: 15 21 45 46 47 48 49 50 53 54 55 56 57 58 59 61 62 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
    syscall <str> (91)
        on left: 90 91 92 93 94 95 96
        on right: 44 88
    syscall_write_content <str> (92)
        on left: 97 98 99
        on right: 93 94 95 96


State 0

    0 $accept: . input $end
    1 input: . program_start
    2 program_start: . program_main
    3              | . const_declaration program_start
    4              | . var_decl program_start
    5              | . fun_definition program_start
    6 program_main: . KW_DEF KW_MAIN L_PARENTHESIS R_PARENTHESIS COLON KW_ENDDEF SEMICOLON
    7             | . KW_DEF KW_MAIN L_PARENTHESIS R_PARENTHESIS COLON function_body KW_ENDDEF SEMICOLON
   14 const_declaration: . KW_CONST const_assign COLON data_type SEMICOLON
   17 var_decl: . var_chain COLON data_type SEMICOLON
   18 var_chain: . var_strings
   19          | . var_chain COMMA var_strings
   20 var_strings: . TK_IDENTIFIER
   21            | . TK_IDENTIFIER L_BRACKET expression R_BRACKET
   27 fun_definition: . KW_DEF TK_IDENTIFIER L_PARENTHESIS fun_parameters R_PARENTHESIS OP_MINUS OP_GREATER data_type COLON function_body KW_ENDDEF SEMICOLON
   28               | . KW_DEF TK_IDENTIFIER L_PARENTHESIS fun_parameters R_PARENTHESIS COLON function_body KW_ENDDEF SEMICOLON

    KW_CONST       shift, and go to state 1
    KW_DEF         shift, and go to state 2
    TK_IDENTIFIER  shift, and go to state 3

    input              go to state 4
    program_start      go to state 5
    program_main       go to state 6
    const_declaration  go to state 7
    var_decl           go to state 8
    var_chain          go to state 9
    var_strings        go to state 10
    fun_definition     go to state 11


State 1

   14 const_declaration: KW_CONST . const_assign COLON data_type SEMICOLON
   15 const_assign: . TK_IDENTIFIER OP_ASSIGN expression
   16             | . TK_IDENTIFIER OP_ASSIGN TK_STRING

    TK_IDENTIFIER  shift, and go to state 12

    const_assign  go to state 13


State 2

    6 program_main: KW_DEF . KW_MAIN L_PARENTHESIS R_PARENTHESIS COLON KW_ENDDEF SEMICOLON
    7             | KW_DEF . KW_MAIN L_PARENTHESIS R_PARENTHESIS COLON function_body KW_ENDDEF SEMICOLON
   27 fun_definition: KW_DEF . TK_IDENTIFIER L_PARENTHESIS fun_parameters R_PARENTHESIS OP_MINUS OP_GREATER data_type COLON function_body KW_ENDDEF SEMICOLON
   28               | KW_DEF . TK_IDENTIFIER L_PARENTHESIS fun_parameters R_PARENTHESIS COLON function_body KW_ENDDEF SEMICOLON

    KW_MAIN        shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15


State 3

   20 var_strings: TK_IDENTIFIER .  [COMMA, COLON]
   21            | TK_IDENTIFIER . L_BRACKET expression R_BRACKET

    L_BRACKET  shift, and go to state 16

    $default  reduce using rule 20 (var_strings)


State 4

    0 $accept: input . $end

    $end  shift, and go to state 17


State 5

    1 input: program_start .

    $default  reduce using rule 1 (input)


State 6

    2 program_start: program_main .

    $default  reduce using rule 2 (program_start)


State 7

    2 program_start: . program_main
    3              | . const_declaration program_start
    3              | const_declaration . program_start
    4              | . var_decl program_start
    5              | . fun_definition program_start
    6 program_main: . KW_DEF KW_MAIN L_PARENTHESIS R_PARENTHESIS COLON KW_ENDDEF SEMICOLON
    7             | . KW_DEF KW_MAIN L_PARENTHESIS R_PARENTHESIS COLON function_body KW_ENDDEF SEMICOLON
   14 const_declaration: . KW_CONST const_assign COLON data_type SEMICOLON
   17 var_decl: . var_chain COLON data_type SEMICOLON
   18 var_chain: . var_strings
   19          | . var_chain COMMA var_strings
   20 var_strings: . TK_IDENTIFIER
   21            | . TK_IDENTIFIER L_BRACKET expression R_BRACKET
   27 fun_definition: . KW_DEF TK_IDENTIFIER L_PARENTHESIS fun_parameters R_PARENTHESIS OP_MINUS OP_GREATER data_type COLON function_body KW_ENDDEF SEMICOLON
   28               | . KW_DEF TK_IDENTIFIER L_PARENTHESIS fun_parameters R_PARENTHESIS COLON function_body KW_ENDDEF SEMICOLON

    KW_CONST       shift, and go to state 1
    KW_DEF         shift, and go to state 2
    TK_IDENTIFIER  shift, and go to state 3

    program_start      go to state 18
    program_main       go to state 6
    const_declaration  go to state 7
    var_decl           go to state 8
    var_chain          go to state 9
    var_strings        go to state 10
    fun_definition     go to state 11


State 8

    2 program_start: . program_main
    3              | . const_declaration program_start
    4              | . var_decl program_start
    4              | var_decl . program_start
    5              | . fun_definition program_start
    6 program_main: . KW_DEF KW_MAIN L_PARENTHESIS R_PARENTHESIS COLON KW_ENDDEF SEMICOLON
    7             | . KW_DEF KW_MAIN L_PARENTHESIS R_PARENTHESIS COLON function_body KW_ENDDEF SEMICOLON
   14 const_declaration: . KW_CONST const_assign COLON data_type SEMICOLON
   17 var_decl: . var_chain COLON data_type SEMICOLON
   18 var_chain: . var_strings
   19          | . var_chain COMMA var_strings
   20 var_strings: . TK_IDENTIFIER
   21            | . TK_IDENTIFIER L_BRACKET expression R_BRACKET
   27 fun_definition: . KW_DEF TK_IDENTIFIER L_PARENTHESIS fun_parameters R_PARENTHESIS OP_MINUS OP_GREATER data_type COLON function_body KW_ENDDEF SEMICOLON
   28               | . KW_DEF TK_IDENTIFIER L_PARENTHESIS fun_parameters R_PARENTHESIS COLON function_body KW_ENDDEF SEMICOLON

    KW_CONST       shift, and go to state 1
    KW_DEF         shift, and go to state 2
    TK_IDENTIFIER  shift, and go to state 3

    program_start      go to state 19
    program_main       go to state 6
    const_declaration  go to state 7
    var_decl           go to state 8
    var_chain          go to state 9
    var_strings        go to state 10
    fun_definition     go to state 11


State 9

   17 var_decl: var_chain . COLON data_type SEMICOLON
   19 var_chain: var_chain . COMMA var_strings

    COMMA  shift, and go to state 20
    COLON  shift, and go to state 21


State 10

   18 var_chain: var_strings .

    $default  reduce using rule 18 (var_chain)


State 11

    2 program_start: . program_main
    3              | . const_declaration program_start
    4              | . var_decl program_start
    5              | . fun_definition program_start
    5              | fun_definition . program_start
    6 program_main: . KW_DEF KW_MAIN L_PARENTHESIS R_PARENTHESIS COLON KW_ENDDEF SEMICOLON
    7             | . KW_DEF KW_MAIN L_PARENTHESIS R_PARENTHESIS COLON function_body KW_ENDDEF SEMICOLON
   14 const_declaration: . KW_CONST const_assign COLON data_type SEMICOLON
   17 var_decl: . var_chain COLON data_type SEMICOLON
   18 var_chain: . var_strings
   19          | . var_chain COMMA var_strings
   20 var_strings: . TK_IDENTIFIER
   21            | . TK_IDENTIFIER L_BRACKET expression R_BRACKET
   27 fun_definition: . KW_DEF TK_IDENTIFIER L_PARENTHESIS fun_parameters R_PARENTHESIS OP_MINUS OP_GREATER data_type COLON function_body KW_ENDDEF SEMICOLON
   28               | . KW_DEF TK_IDENTIFIER L_PARENTHESIS fun_parameters R_PARENTHESIS COLON function_body KW_ENDDEF SEMICOLON

    KW_CONST       shift, and go to state 1
    KW_DEF         shift, and go to state 2
    TK_IDENTIFIER  shift, and go to state 3

    program_start      go to state 22
    program_main       go to state 6
    const_declaration  go to state 7
    var_decl           go to state 8
    var_chain          go to state 9
    var_strings        go to state 10
    fun_definition     go to state 11


State 12

   15 const_assign: TK_IDENTIFIER . OP_ASSIGN expression
   16             | TK_IDENTIFIER . OP_ASSIGN TK_STRING

    OP_ASSIGN  shift, and go to state 23


State 13

   14 const_declaration: KW_CONST const_assign . COLON data_type SEMICOLON

    COLON  shift, and go to state 24


State 14

    6 program_main: KW_DEF KW_MAIN . L_PARENTHESIS R_PARENTHESIS COLON KW_ENDDEF SEMICOLON
    7             | KW_DEF KW_MAIN . L_PARENTHESIS R_PARENTHESIS COLON function_body KW_ENDDEF SEMICOLON

    L_PARENTHESIS  shift, and go to state 25


State 15

   27 fun_definition: KW_DEF TK_IDENTIFIER . L_PARENTHESIS fun_parameters R_PARENTHESIS OP_MINUS OP_GREATER data_type COLON function_body KW_ENDDEF SEMICOLON
   28               | KW_DEF TK_IDENTIFIER . L_PARENTHESIS fun_parameters R_PARENTHESIS COLON function_body KW_ENDDEF SEMICOLON

    L_PARENTHESIS  shift, and go to state 26


State 16
